# HFT

./: .clang-tidy.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  TODO.md  main.cpp  stop-fixsim.sh
.github/workflows/: ci.yml
GatewayIn/include/: NetworkClientBase.hpp  NetworkClientBase.inl  PixNetworkClient.hpp  Quote.hpp  QuoteConsumer.hpp  QuotesObtainer.hpp
GatewayIn/include/TCP/: NetworkClientBase.hpp  NetworkClientBase.inl  PixNetworkClient.hpp
GatewayIn/include/WEBSOCKET/: BitVavoNetworkClient.hpp  WebSocketClientBase.hpp
GatewayIn/include/websocket/: BitVavoNetworkClient.hpp
GatewayIn/src/: QuotesObtainer.cpp
Parser/include/: BitvavoBookParser.hpp  FixBookParser.hpp
Vizualizer/: Visualizer.hpp
apps/hft/: main.cpp
scripts/: check-style.sh  remote_profiler.sh  start-fixsim-locally.sh  start-fixsim.sh
src/: CMakeLists.txt
src/GatewayIn/: CMakeLists.txt
src/GatewayIn/include/: OrderBook.hpp  QuotesObtainer.hpp
src/GatewayIn/include/tcp/: NetworkClientBase.inl  PixNetworkClient.hpp
src/GatewayIn/include/websocket/: BitVavoNetworkClient.hpp  WebSocketClientBase.hpp
src/OrderBook/: CMakeLists.txt
src/OrderBook/include/: OrderBook.hpp  QuoteConsumer.hpp
src/OrderBook/src/: OrderBook.cpp
src/Parser/: CMakeLists.txt
src/Parser/include/: BitvavoBookParser.hpp
src/Visualiser/: CMakeLists.txt
src/Visualiser/include/: Visualizer.hpp
src/Visualiser/src/: VisualizerImGui.cpp
src/Vizualizer/: Visualizer.hpp
tests/: CMakeLists.txt
tests/gateway/: test_quotes_obtainer.cpp
tests/mocks/GatewayIn/include/tcp/: MockFixNetworkClient.hpp  PixNetworkClient.hpp
tests/mocks/GatewayIn/include/websocket/: MockBitVavoClient.hpp
tests/orderbook/: test_quote_consumer.cpp
tests/parser/: test_bitvavo_parser.cpp  test_fix_parser.cpp
